# Form-Assistant-PoC

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_payments.py
app/: config.py  dependencies.py  logging.py  main.py
app/agent/: car_models.csv  graph.py  models.py  prompts.py  tools.py  utils.py
app/api/: auth.py  chat.py  deadlines.py  pages.py  rag.py
app/conversations/: __init__.py  dao.py  models.py  schemas.py
app/db/: qdrant.py  session.py
app/integrations/: __init__.py  _types.py  stripe.py
app/models/: conversation.py
app/payments/: dao.py  models.py  service.py
app/schemas/: chat.py
app/sequencer/: __init__.py
app/services/: auth.py  chat.py  premium.py  rag.py
app/static/css/: app.css
app/templates/: base.html  index.html
app/templates/partials/: agent_placeholder.html  agent_stream.html  chat_area.html  message.html  thread_list.html
app/users/: __init__.py  dao.py  models.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: auth.ts  client.ts  messages.ts  threads.ts
frontend/src/components/chat/: ChatArea.tsx  MessageBubble.tsx  MessageInput.tsx  TypingIndicator.tsx
frontend/src/components/layout/: Navbar.tsx
frontend/src/components/sidebar/: Sidebar.tsx  ThreadItem.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useStream.ts
frontend/src/pages/: ChatPage.tsx  LoginPage.tsx
