[project]
name = "ai-form"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14",
    "asyncpg>=0.30",
    "authlib>=1.5",
    "boto3==1.42.90",
    "fastapi==0.136.0",
    "itsdangerous>=2.2.0",
    "langchain-aws==1.4.4",
    "langchain-qdrant==1.1.0",
    "langchain-core==1.2.31",
    "langgraph==1.1.6",
    "langgraph-checkpoint-postgres==3.0.5",
    "nanoid==2.0.0",
    "pydantic==2.13.2",
    "pydantic-settings==2.13.1",
    "python-jose[cryptography]>=3.3",
    "python-multipart>=0.0.20",
    "sqlalchemy[asyncio]>=2.0",
    "sse-starlette>=2.2",
    "structlog==25.5.0",
    "uvicorn[standard]>=0.34",
    "langchain>=1.2.15",
    "langchain-text-splitters>=1.1.1",
    "b64>=0.4",
    "langchain-community>=0.4.1",
    "uuid7>=0.1.0",
    "fastembed==0.8.0",
    "unstructured[pdf]>=0.22.21",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
]
